editor/tree-sitter/grammar.js
    source_file: $ => repeat(choice(
      $._newline,
      $._top_level_statement,
    )),

    _top_level_statement: $ => choice(
      $.import_statement,
      $.qualified_import_statement,
      $._statement,                          // _statement already includes _declaration
    ),

    /* =====================================================================
     * Imports
     * ===================================================================*/
    // Selective import: `from xxx import name [as alias] [, ...]`
    decorator: $ => seq(
      '@',
      field('name', $.identifier),
      optional(seq(
        '(',
        optional($.decorator_arguments),
        ')',
      )),
    ),

    decorator_arguments: $ => sep1($.decorator_argument, ','),

    decorator_argument: $ => choice(
      seq(field('name', $.identifier), '=', field('value', $._expression)),
      field('value', $._expression),
    ),

    /* ------- Function declaration ------- */
    function_declaration: $ => seq(
      optional('async'),
      'fn',
      field('name', $.function_name),
      optional(field('generics', $.generic_parameters)),
      '(',
      optional(field('parameters', $.parameter_list)),
      ')',
      optional(seq('->', field('return_type', $._type))),
      choice(
        field('body', $.function_body),
        $._newline,                  // @native fn — no body
      ),
    ),

    // `identifier` already greedily absorbs a trailing `!` (see the
    // identifier terminal at the bottom), so no extra suffix is needed
    // for mutating-method names like `sort!`.
    function_name: $ => choice(
      $.identifier,
      $.operator_name,
    ),

    parameter_list: $ => sep1($.parameter, ','),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    function_body: $ => seq(
      ':',
      optional(seq(
        $._indent,
        repeat($.contract_clause),
        repeat1($._statement),
        $._dedent,
      )),
    ),

    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      optional(field('generics', $.generic_parameters)),
      ':',
      $._indent,
      repeat1($.enum_variant),
      $._dedent,
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '(',
        optional($.variant_payload),
        ')',
      )),
      $._newline,
    ),

    variant_payload: $ => sep1($.variant_field, ','),

    variant_field: $ => choice(
      seq(field('name', $.identifier), ':', field('type', $._type)),
      field('type', $._type),
    ),

    /* ------- Type alias ------- */
    _type: $ => $.union_type,

    union_type: $ => prec.left(seq(
      $._primary_type,
      repeat(seq('|', $._primary_type)),
    )),

    _primary_type: $ => choice(
      $.primitive_type,
      $.named_type,
      $.tuple_type,
      $.function_type,
      $.weak_type,
      $.option_type,
      $.array_type,
    ),

    primitive_type: $ => choice(...PRIMITIVE_TYPES),

    named_type: $ => prec.right(seq(
      $.identifier,
      optional($.type_arguments),
      repeat(seq(
        '::',
        $.identifier,
        optional($.type_arguments),
      )),
    )),

    type_arguments: $ => seq(
      '<',
      sep1($._type, ','),
      '>',
    ),

    _statement: $ => choice(
      seq($._simple_statement, $._newline),
      $._compound_statement,
      $._declaration,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    break_statement: $ => 'break',
    continue_statement: $ => 'continue',

    /* `name = value` and chained-postfix LHS assignment.
       (typed `name: T = value` is a separate rule to avoid LR(1) trouble.) */
    assignment_statement: $ => prec.right(PREC.conditional - 1, seq(
      field('left', $._lvalue),
      '=',
      field('right', $._expression),
    )),

    expression_statement: $ => $._expression,

    _lvalue: $ => choice(
      $.identifier,
      $._lvalue_postfix,
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      ':',
      optional(field('consequence', $.block)),
      repeat(seq(
        'else',
        'if',
        field('alt_condition', $._expression),
        ':',
        optional(field('alt_consequence', $.block)),
      )),
      optional(seq(
        'else',
        optional(seq(
          ':',
          optional(field('alternative', $.block)),
        )),
      )),
    )),

    // Live-editing tolerance (#1623): see if_statement note above.
    while_statement: $ => seq(
      'while',
      field('condition', $._expression),
      ':',
      optional(field('body', $.block)),
    ),

    // Live-editing tolerance (#1623): see if_statement note above.
    for_statement: $ => seq(
      'for',
      field('target', $._for_target),
      'in',
      field('iter', $._expression),
      ':',
      optional(field('body', $.block)),
    ),

    _for_target: $ => choice(
      $.identifier,
      seq('(', sep1($.identifier, ','), ')'),
      // bare-comma destructure: `for a, b in iter:`
      seq($.identifier, ',', sep1($.identifier, ',')),
    ),

    // Two forms: `case <expr>:` (scrutinee form, pattern-matching) and
    // `case:` (no scrutinee, condition-list form — each arm is a boolean
    // condition expression). They use different arm grammars so they are
    // surfaced as distinct rules joined under `case_statement`.
    case_statement: $ => choice(
      $.case_match_statement,
      $.case_cond_statement,
    ),

    // Live-editing tolerance (#1623): the INDENT arm list is optional so
    // that `case x:` typed alone produces a complete case_match_statement
    // named node. See editor/tree-sitter/README.md §"Live-editing tolerance".
    case_match_statement: $ => prec.dynamic(2, seq(
      'case',
      field('scrutinee', $._expression),
      ':',
      optional(seq(
        $._indent,
        repeat1($.case_arm),
        $._dedent,
      )),
    )),

    // Live-editing tolerance (#1623): see case_match_statement note above.
    case_cond_statement: $ => prec.dynamic(2, seq(
      'case',
      ':',
      optional(seq(
        $._indent,
        repeat1($.case_cond_arm),
        $._dedent,
      )),
    )),

    case_arm: $ => seq(
      field('pattern', choice($._pattern, $.or_pattern)),
      optional(seq('if', field('guard', $._expression))),
      ':',
      choice(
        // inline body: single statement on same line as the `:`.
        // The statement parser handles the trailing newline via `_newline`,
        // so do NOT add another `_newline` here (it would consume the next
        // arm's pattern lookahead position).
        field('body', $._statement),
        seq($._indent, repeat1($._statement), $._dedent),
      ),
    ),

    case_cond_arm: $ => seq(
      field('condition', choice($._expression, $.wildcard_pattern)),
      ':',
      choice(
        field('body', $._statement),
        seq($._indent, repeat1($._statement), $._dedent),
      ),
    ),

    block: $ => seq(
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    /* =====================================================================
     * Patterns
     * ===================================================================*/
    _pattern: $ => choice(
      $.literal_pattern,
      $.wildcard_pattern,
      $.binding_pattern,
      $.tuple_pattern,
      $.constructor_pattern,
      $.range_pattern,
    ),

    /* `pat | pat | pat` — only valid as the top-level pattern of a
     * case_arm; OR alternatives must not contain bindings. The grammar
     * here permits any nested pattern; the constraint is enforced by
     * the parser at compile time. */
    literal_pattern: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      'true',
      'false',
      'none',
      seq('-', choice($.integer_literal, $.float_literal)),
    ),

    wildcard_pattern: $ => '_',

    binding_pattern: $ => $.identifier,

    constructor_pattern: $ => seq(
      $.qualified_identifier,
      optional(seq(
        '(',
        optional(sep1($._pattern, ',')),
        ')',
      )),
    ),

    qualified_identifier: $ => prec.right(seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    )),

    range_pattern: $ => seq(
      $.literal_pattern,
      '..',
      $.literal_pattern,
    ),

    /* =====================================================================
     * Expressions (precedence climbing — lowest to highest)
     * ===================================================================*/
    _expression: $ => choice(
      $.lambda_expression,
      $.if_expression,
      $.case_expression,
      $._conditional_expression,
    ),

    case_expression: $ => prec(PREC.conditional, choice(
      $.case_match_expression,
      $.case_cond_expression,
    )),

    case_match_expression: $ => prec.dynamic(1, seq(
      'case',
      field('scrutinee', $._expression),
      ':',
      $._indent,
      repeat1($.case_arm),
      $._dedent,
    )),

    binary_expression: $ => choice(
      prec.right(PREC.coalesce,
        seq(field('left', $._expression), field('operator', '??'),  field('right', $._expression))),
      prec.left(PREC.or,
        seq(field('left', $._expression), field('operator', 'or'),  field('right', $._expression))),
      prec.left(PREC.and,
        seq(field('left', $._expression), field('operator', 'and'), field('right', $._expression))),
      ...[
        ['==', PREC.comparison],
        ['!=', PREC.comparison],
        ['<',  PREC.comparison],
        ['<=', PREC.comparison],
        ['>',  PREC.comparison],
        ['>=', PREC.comparison],
        ['|',  PREC.bit_or],
        ['^',  PREC.bit_xor],
        ['&',  PREC.bit_and],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['>>>',PREC.shift],
        ['..', PREC.range],
        ['+',  PREC.additive],
        ['-',  PREC.additive],
        ['*',  PREC.multiplicative],
        ['/',  PREC.multiplicative],
        ['//', PREC.multiplicative],
        ['%',  PREC.multiplicative],
      ].map(([op, p]) => prec.left(p,
        seq(field('left', $._expression), field('operator', op), field('right', $._expression)),
      )),
      // 'in' / 'not in' membership test
      prec.left(PREC.comparison,
        seq(field('left', $._expression),
            field('operator', choice('in', seq('not', 'in'))),
            field('right', $._expression))),
      // power is right-associative
      prec.right(PREC.power,
        seq(field('left', $._expression), field('operator', '**'), field('right', $._expression))),
    ),

    unary_expression: $ => prec.right(PREC.unary, seq(
      field('operator', choice('-', '+', '~', 'not', 'await', 'weak')),
      field('operand', $._expression),
    )),

    /* ------- Postfix chain: call, index, .field, ?, ++, --, as ------- */
    _postfix_expression: $ => choice(
      $._primary_expression,
      $.call_expression,
      $.index_expression,
      $.field_access,
      $.unwrap_expression,
      $.update_expression,
      $.cast_expression,
    ),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._postfix_expression),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
    )),

    index_expression: $ => prec(PREC.postfix, seq(
      field('object', $._postfix_expression),
      '[',
      sep1($._expression, ','),
      ']',
    )),

    field_access: $ => prec(PREC.postfix, seq(
      field('object', $._postfix_expression),
      '.',
      field('field', $.identifier),
    )),

    argument_list: $ => sep1($.argument, ','),

    argument: $ => choice(
      seq(field('name', $.identifier), '=', field('value', $._expression)),
      field('value', $._expression),
    ),

    /* ------- Primary ------- */
    tuple_literal: $ => choice(
      // 1-tuple `(e,)`
      seq('(', $._expression, ',', ')'),
      // n-tuple `(e1, e2, ...)`  (n >= 2)
      seq('(', $._expression, ',', sep1($._expression, ','), ')'),
    ),

    list_literal: $ => seq(
      '[',
      optional(seq(sep1($._expression, ','), optional(','))),
      ']',
    ),

    integer_literal: $ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F][0-9a-fA-F_]*/,
        /0b[01][01_]*/,
      ),
      optional(choice('i8','i16','i32','i64','u8','u16','u32','u64')),
    )),

    /* ------- Float ------- */
    string_literal: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\\n]/,
        seq('\\', choice(
          /[ntr0\\"']/,
          /x[0-9a-fA-F]{2}/,
          /u\{[0-9a-fA-F]+\}/,
        )),
      )),
      '"',
    )),

    /* ------- Regex -------
     * `/pattern/flags`. Conflicts with `/` (division) — the external
     * scanner emits `_regex_literal` only when the parser state is
     * compatible with starting an expression. */
    f_string: $ => seq(
      $._fstring_start,
      optional(seq(
        $._expression,
        repeat(seq($._fstring_mid, $._expression)),
      )),
      $._fstring_end,
    ),

    /* =====================================================================
     * Identifier & comment
     * ===================================================================*/

    /* Trailing `!` is greedily absorbed for mutating method names
     * (sort!, append!, reverse!, clear!). The lexer excludes `!=` from
     * this absorption (parser-conventions.md, #1211/#1568). */
    identifier: $ => token(seq(
      /[a-zA-Z_][a-zA-Z0-9_]*/,
      optional('!'),
    )),
